--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,13 @@ img{
 
 
 /* H E A D E R */
+@media(min-width:768px){
+    .barra{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
 .site-header{
     background-image: url(../images/banner.jpg);
     background-repeat: no-repeat;
@@ -69,11 +76,26 @@ img{
     display: block;
     font-size: 1.8rem;
 }
+@media (min-width:768px) {
+    .navegacion a{
+        display: inline;
+        margin-right: 2rem;
+    }
+    .navegacion a:last-of-type{
+        margin-right: 0px;
+    }
+}
 /* T X T  H E A D E R */
 .txt-header{
     color: #ffffff;
     text-align: center;
     margin-top: 5rem;   
+}
+@media (min-width:768px) {
+    .txt-header{
+        margin-top: 15rem;
+    }
+    
 }
 .txt-header p{
     font-size: 2.2rem;
