--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ body{
 .contenedor{
     max-width: 1200px;
     margin: 0 auto;
+    width: 95%;
 }
 h1,h2,h3,h4{
     font-family: 'PT Sans', sans-serif;
@@ -99,4 +100,49 @@ img{
 }
 .txt-header p{
     font-size: 2.2rem;
+}
+
+/* Contenido Principal */
+.contenido-principal{
+    display: flex;
+    flex-wrap: wrap;
+}
+.blog,.cursos{
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: 100%;
+}
+.cursos{
+    order: -1;
+}
+@media (min-width:768px){
+    .contenido-principal{
+        justify-content: space-between;
+    }
+    .blog{
+        flex-basis: 66.6%;
+    }
+    .cursos{
+        flex-basis: calc(33.3% - 4rem);
+        order: 2;
+    }
+}
+
+/* O P C I O N A L */
+/* .entrada-blog{
+    display: flex;
+    justify-content: space-between;
+}
+.entrada-blog .imagen{
+    flex: 0 0 40%;
+}
+.entrada-blog .contenido-blog{
+    flex: 0 0 calc(60% - 2rem);
+} */
+.entrada-blog{
+    margin-bottom: 2rem;
+    border-bottom: 1px solid #e1e1e1;
+}
+.entrada-blog:last-of-type{
+    border: none;
 }
