--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -25,6 +25,7 @@ h1{
 }
 h2{
     font-size: 4rem;
+    line-height: 1.2;
 }
 h3{
     font-size: 3.2rem;
@@ -134,7 +135,7 @@ img{
     justify-content: space-between;
 }
 .entrada-blog .imagen{
-    flex: 0 0 40%;
+    flex: 0 0 40%;  
 }
 .entrada-blog .contenido-blog{
     flex: 0 0 calc(60% - 2rem);
@@ -145,4 +146,24 @@ img{
 }
 .entrada-blog:last-of-type{
     border: none;
+}
+
+/* C U R S O S S I D E B A R */
+.cursos-lista{
+    padding: 0;
+    list-style: none;
+}
+.curso{
+    padding-bottom: 3rem;
+    border-bottom: 1px solid #e1e1e1;
+}
+.curso:last-of-type{
+    border-bottom: none;
+}
+.curso p{
+    font-family: 'PT Sans',sans-serif;
+    font-weight: 700;
+}
+.curso p span{
+    font-weight: 400;
 }
